--- a/springboot-server-config/cloud-config-repo/cloud-config-test.properties
+++ b/springboot-server-config/cloud-config-repo/cloud-config-test.properties
@@ -2,4 +2,4 @@ mysqldb.datasource.url=jdbc\:MySQL\://127.0.0.1\:3306/test?useUnicode\=true&char
 mysqldb.datasource.username=root
 mysqldb.datasource.password=123qwe
 logging.level.org.springframework.web:DEBUG
-my.message=helloword
+message=helloword-test
