--- a/springboot-server-config/src/main/resources/application.properties
+++ b/springboot-server-config/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8888
 spring.application.name=service-config
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
 
-spring.cloud.config.server.git.uri=https://github.com/18292183200/springboot.git
-spring.cloud.config.server.git.searchPaths=springboot-server-config/cloud-config-repo
+spring.cloud.config.server.git.uri=https://github.com/18292183200/springboot
+spring.cloud.config.server.git.searchPaths=springboot-server-config/cloud-config-repo/
 spring.cloud.config.label=master
-spring.cloud.config.server.git.username=18292183200
+spring.cloud.config.server.git.username=18292183200@139.com
 spring.cloud.config.server.git.password=..didi1314
