--- a/springboot-server-config/cloud-config-repo/cloud-config-test.properties
+++ b/springboot-server-config/cloud-config-repo/cloud-config-test.properties
@@ -1,5 +1,5 @@
 mysqldb.datasource.url=jdbc\:MySQL\://127.0.0.1\:3306/test?useUnicode\=true&characterEncoding\=utf-8
 mysqldb.datasource.username=root
 mysqldb.datasource.password=123qwe
-logging.level.org.springframework.web:DEBUG
+logging.level.org.springframework.web=DEBUG
 message=helloword-test
