--- a/springboot-server-config/src/main/resources/application.properties
+++ b/springboot-server-config/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8888
-spring.application.name=service-config
+spring.application.name=config-server
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
 
 spring.cloud.config.server.git.uri=https://github.com/18292183200/springboot
