--- a/service-feign/pom.xml
+++ b/service-feign/pom.xml
@@ -42,7 +42,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-eureka</artifactId>
+			<artifactId>spring-cloud-netflix-eureka-client</artifactId>
+			<version>1.3.2.RELEASE</version>
 		</dependency>
 	</dependencies>
 
